tests/cases/success/variadic_printf_stack.c
int printf(char *, ...);

int main() {
  return printf("%d %d %d %d %d %d %d %d %d %s\n",
                1, 2, 3, 4, 5, 6, 7, 8, 9, "ok");
}
