tests/cases/fail/variadic_float_arg.c
int printf(char *, ...);

int main() {
  return printf("%f\n", 1.0);
}
